<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/space_m"
        android:paddingTop="@dimen/space_m"
        android:paddingRight="@dimen/space_l"
        android:paddingBottom="@dimen/space_s">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_icon_circle"
            android:contentDescription="@string/back"
            android:padding="10dp"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_m"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/Text.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_mode" />

            <TextView
                android:id="@+id/client_status"
                style="@style/Text.Mono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scanning" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:paddingLeft="@dimen/space_m"
        android:paddingRight="@dimen/space_m">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space_l">

            <!-- Discovered hosts -->
            <LinearLayout
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/SectionHeader"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:text="@string/client_section_hosts" />

                    <Button
                        android:id="@+id/btn_rescan"
                        style="@style/Chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh" />
                </LinearLayout>

                <TextView
                    style="@style/Text.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/client_scan_hint" />

                <LinearLayout
                    android:id="@+id/client_host_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_s"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/client_empty"
                    style="@style/Text.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_s"
                    android:text="@string/no_hosts_found" />
            </LinearLayout>

            <!-- Manual / pairing -->
            <LinearLayout
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SectionHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/client_section_manual" />

                <EditText
                    android:id="@+id/client_ip"
                    style="@style/Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_manual_hint"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/client_code"
                    style="@style/Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_s"
                    android:hint="@string/client_pairing_hint"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="6" />

                <Button
                    android:id="@+id/btn_connect"
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    android:text="@string/client_connect" />

                <TextView
                    android:id="@+id/client_error"
                    style="@style/Text.Danger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_s"
                    android:visibility="gone" />

                <TextView
                    style="@style/Text.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_m"
                    android:text="@string/client_never_installs" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
